--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
 <div class="hero">
     <h1>Английский язык для школьников</h1>
 </div>
+
+
+<div class="white">
+    <div class="white_block">
+        <div class="line2"></div>
+        <h3>Изучение английского языка</h3>
+        <div>
+            <p>Английския язык до сих пор держит планку одних из самых популярных языков всего мира</p>
+            <p>
+                Не упускайте возможность выуить английский язык бесплато с нами вместо скучных уроков в школе
+            </p>
+        </div>
+    </div>
+    <div class="block_2">
+        <img src="img/power.png" alt="">
+    </div>
+    <br style="clear: both" />
+</div>
 <div class="content-wrapper">
     <h1>Карта изучения английского с 5 по 11 классы</h1>
     <div class="container">
@@ -130,42 +148,38 @@
         </div>
     </div>
 </div>
-
-
-<div class="white">
-  <div class="white_block">
-      <div class="line2"></div>
-    <h3>Изучение английского языка</h3>
-      <div>
-          <p>Английския язык до сих пор держит планку одних из самых популярных языков всего мира</p>
+<br style="clear: both" />
+<div class="bl2">
+    <div class="leftleft">
+        <div class="line2"></div>
+        <div class="left_big">Английский язык <br/> с  <b>RareNotion</b></div>
+        <div class="white_text">
+            <p>Здесь представлены все грамматические явления, встречающиеся в школьном курсе английского языка, начиная с уровня A2 и больше.</p>
 <p>
-          Не упускайте возможность выуить английский язык бесплато с нами вместо скучных уроков в школе
-</p>
-      </div>
-  </div>
-    <div class="block_2">
-        <img src="img/power.png" alt="">
+            Простые и удобные для запоминания темы дополнены видео уроками и, конечно
+    мотивирущими картинками современной Америки</p>
+        </div>
     </div>
 </div>
 <br style="clear: both" />
-<div class="wrapper">
-    <div class="gallery">
-        <ul>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/9.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/2.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/3.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/1.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/4.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/5.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/7.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/8.png"></li>
-            <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/53819/6.png"></li>
-        </ul>
+<div class="footer">
+    <div class="ff"></div>
+    <div class="ff">
+        <h3>RareNotion</h3>
     </div>
+    <div class="ff">
+        <h3>Компании</h3>
+    </div>
+    <div class="ff">
+        <h3>Комьюнити</h3>
+    </div>
+    <div class="ff">
+        <h3>Разработчики</h3>
+    </div>
+    <div class="ff"></div>
 </div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
 
 <script src="js/index.js"></script>
-
 </body>
 </html>
